<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tree.test.tibetan.Question2">


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottomBarCol"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:id="@+id/resetB1"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="#000000" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:id="@+id/nextB1"
            android:onClick="next"
            android:text="@string/next"
            android:textColor="#000000" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_above="@+id/bottomBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desQ2" />


                <EditText
                    android:id="@+id/dogEt"
                    style="@style/question2ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dog"
                    android:inputType="text"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/catEt"
                    style="@style/question2ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cat"
                    android:inputType="text"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/ratEt"
                    style="@style/question2ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rat"
                    android:inputType="text"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/coffeeEt"
                    style="@style/question2ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/coffee"
                    android:inputType="text"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/seaEt"
                    style="@style/question2ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sea"
                    android:inputType="text"
                    android:maxLines="1" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
