<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tree.test.tibetan.Question1">


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottomBarCol"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:id="@+id/resetB1"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="#000000" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:id="@+id/nextB1"
            android:onClick="next"
            android:text="@string/next"
            android:textColor="#000000" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_above="@id/bottomBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desQ1" />

                <TextView
                    android:id="@+id/q1"
                    style="@style/question1IB"
                    android:layout_width="@dimen/q1ButtonW"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <TextView
                    android:id="@+id/q2"
                    style="@style/question1IB"
                    android:layout_width="@dimen/q1ButtonW"
                    android:layout_height="wrap_content"
                    android:text="2" />

                <TextView
                    android:id="@+id/q3"
                    style="@style/question1IB"
                    android:layout_width="@dimen/q1ButtonW"
                    android:layout_height="wrap_content"
                    android:text="3" />

                <TextView
                    android:id="@+id/q4"
                    style="@style/question1IB"
                    android:layout_width="@dimen/q1ButtonW"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <TextView
                    android:id="@+id/q5"
                    style="@style/question1IB"
                    android:layout_width="@dimen/q1ButtonW"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />


                <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/b1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:onClick="click"
                        android:text="@string/cow" />

                    <Button
                        android:id="@+id/b2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:onClick="click"
                        android:text="@string/tiger" />

                    <Button
                        android:id="@+id/b3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:onClick="click"
                        android:text="@string/sheep" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/b4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:onClick="click"
                        android:text="@string/horse"/>

                    <Button
                        android:id="@+id/b5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:onClick="click"
                        android:text="@string/pig" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
