<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.tree.test.tibetan.Result">


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/result_block"
                android:lineSpacingExtra="@dimen/resultLineSpacing"
                android:orientation="vertical"
                android:textColor="@color/resultCol"
                android:textSize="@dimen/resultTS" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/result_block"
                android:lineSpacingExtra="@dimen/resultLineSpacing"
                android:orientation="vertical"
                android:textColor="@color/resultCol"
                android:textSize="@dimen/resultTS" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/result_block"
                android:lineSpacingExtra="@dimen/resultLineSpacing"
                android:orientation="vertical"
                android:textColor="@color/resultCol"
                android:textSize="@dimen/resultTS" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/result_block"
                android:lineSpacingExtra="@dimen/resultLineSpacing"
                android:orientation="vertical"
                android:text="@string/motivation"
                android:textColor="@color/resultCol"
                android:textSize="@dimen/resultTS" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#37ab48"
                android:onClick="finishIt"
                android:text="@string/finish"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:onClick="shareIt"
                android:text="Share with your firends"
                android:textColor="#ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>

    </ScrollView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/avViewr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/result_ad_unit_id" />
</RelativeLayout>
